* Fri Aug 15 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.6-1)
- Thamway NMR PROT built-in signal generator
- Thamway NMR pulser (USB/GPIB/TCP: experimental) 
- Overpaint option for OpenGL
- Improved i18n for QT
- Sophisticated font size for graphs.
- Win32 build becomes free from boost.

* Mon Aug 11 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.5-1)
- Beta 5
- Thamway impedance analyzer
- R&S SML/SMV signal generator

* Sun Aug 10 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.4-1)
- Beta 4
- Works with windows binary.

* Fri Aug 8 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.3-1)
- Fix for daqmxpulser.
- Keepalive TCP and fix for signals.

* Wed Aug 6 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.2-1)
- Fix for sliders.
- GUI looks better.

* Sun Aug 3 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.1-1)
- Fix for XTime(Win).
- Tcp/IP for win.
- Message window.

* Fri Aug 1 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (4.0.0-1)
- Beta 1
- Windows/MacOSX builds without Qt nor FTGL.

* Sat Jul 28 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.7-1)
- autotuner: Improved.

* Thu Apr 25 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.6-2)
- nmrpulser: On-line start/stop to keep coherency to DSO, when Digital RF is on.
- nidaqdso.cpp: bug fix for pulser creation. 

* Fri Mar 8 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.5-1)
- secondarydriverinterface: does negotiation.
- flowcontroller: valves gets working.
- serial, levelmeter: supports echo backs.

* Tue Feb 19 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.4-1)
- autotuner: better tuning.

* Sun Feb 17 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.3-1)
- charinterface: changes default EOS from serial to LF.

* Sat Feb 16 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.2-3)
- Better autolctuner.
- Fix for Cryocon M32/62.

* Tue Feb 12 2013 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
- (3.3.1-1)
- Along with clang++.