@@ -135,7 +135,7 @@ XWinCUSBInterface::XWinCUSBInterface(const char *name, bool runtime, const share
             for(auto it = s_devices.begin(); it != s_devices.end(); ++it) {
                 XString idn = getIDN(it->handle, 7);
                 if(idn.empty()) continue;
-                it->id = idn; //stores for open() to distinguish devices.
+                it->id = idn; //stores id string for open() to distinguish devices.
                 tr[ *device()].add(idn);
             }
             if(tr.commit())
