@@ -1,11 +1,13 @@
-* Fri Aug 15 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
+* Sun Aug 17 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
 - (4.0.6-1)
 - Thamway NMR PROT built-in signal generator
-- Thamway NMR pulser (USB/GPIB/TCP: experimental) 
+- Thamway NMR pulser PG series (USB/GPIB/TCP: experimental)
+- Thamway A/D conversion board DV14U25 (USB: experimental) 
 - Overpaint option for OpenGL
 - Improved i18n for QT
 - Sophisticated font size for graphs.
 - Win32 build becomes free from boost.
+- Fix Lecroy DSO communications.
 
 * Mon Aug 11 2014 Kentaro Kitagawa <kitag@kochi-u.ac.jp>
 - (4.0.5-1)
